# Robotic_Arm

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_robotic_arm_latest.yaml
launch/: display.launch.py  gazebo.launch
meshes/: base_link.STL  elbow_1_link.STL  elbow_2_link.STL  gripper_link.STL  gripper_rotate_link.STL  gripper_vertical_link.STL
urdf/: robotic_arm_latest.csv  robotic_arm_latest.urdf
