<?xml version="1.0"?>
<package format="3">
  <name>robotic_arm_latest</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for robotic_arm_latest.
    This package contains configuration data, 3D models, and launch files
    for the robotic_arm_latest robot.
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <author>TODO</author>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- Optional: for launch system -->
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

